# soa

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
src/: ForEachMacro.hpp  SoaVector.hpp  soa.hpp
tests/: AoSvsSoA_test.hpp  ranges_test.hpp  test.cpp
